--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "aws-sdk": "^2.846.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
